  syntax = "proto3";

package flashback;

import "types.proto";

service server {
  rpc get_roadmaps (user) returns (roadmaps);
}

/**
 * Server handles the following requests:
 *
 * Welcome
 *
 * - Get roadmaps
 * - Create a roadmap
 * - Reorder a roadmap
 * - Remove a roadmap
 *
 * Roadmap
 *
 * - Get milestones
 * - Rename the roadmap
 * - Add a milestone
 * - Reorder a milestone
 * - Drop a milestone from the roadmap
 * - Edit the level of a milestone
 *
 * Subject
 *
 * - Get resources
 * - Add the resource to a subject
 * - Create a resource
 * - Reorder a resource
 * - Drop a resource from the subject
 * - Merge two resources
 *
 * Resource
 *
 * - Get sections
 * - Rename the resource
 * - Remove the resource
 * - Edit the provider of resource
 * - Edit the presenter of resource
 * - Edit the link of resource
 * - Change resource type
 * - Change section pattern
 * - Change condition
 * - Create a section
 * - Reorder a section
 * - Remove a section
 * - Merge two sections
 * - Rename a section
 * - Move a section to another resource
 *
 * Subject
 *
 * - Get topics
 * - Add a resource to the subject
 * - Rename the subject
 * - Remove the subject
 * - Create a topic
 * - Reorder a topic
 * - Remove a topic
 * - Merge two topics
 * - Rename a topic
 * - Move a topic to another subject
 *
 * Section
 *
 * - Get study cards
 * - Create a new card
 * - Reorder cards
 * - Remove a card
 * - Merge two cards
 * - Rename the section
 * - Remove the section
 * - Move a card to another resource/section
 *
 * Topic
 *
 * - Get practice cards
 * - Create a new card
 * - Reorder cards
 * - Remove a card
 * - Merge two cards
 * - Rename the topic
 * - Remove the topic
 * - Move a card to another subject/topic
 *
 * Card
 *
 * - Edit heading
 * - Create a block
 * - Edit a block
 * - Remove a block
 * - Edit the extension of a block
 * - Edit the language of a block
 * - Edit the metadata of a block
 * - Reorder blocks
 * - Merge two blocks
 * - Split a block into two
 *
 */
